@@ -141,6 +141,7 @@ struct argf {
     int lineno;
     int init_p, next_p;
     VALUE argv;
+    VALUE defin, defout;
     char *inplace;
     int binmode;
     struct rb_io_enc_t encs;
@@ -6597,6 +6598,8 @@ argf_mark(void *ptr)
     rb_gc_mark(p->current_file);
     rb_gc_mark(p->argv);
     rb_gc_mark(p->encs.ecopts);
+    rb_gc_mark(p->defin);
+    rb_gc_mark(p->defout);
 }
 
 static void
@@ -6614,6 +6617,8 @@ argf_init(struct argf *p, VALUE v)
     p->current_file = Qnil;
     p->lineno = 0;
     p->argv = v;
+    p->defin = rb_stdin;
+    p->defout = rb_stdout;
 }
 
 static VALUE
@@ -6705,7 +6710,7 @@ argf_forward(int argc, VALUE *argv, VALUE argf)
 
 #define next_argv() argf_next_argv(argf)
 #define ARGF_GENERIC_INPUT_P() \
-    (ARGF.current_file == rb_stdin && TYPE(ARGF.current_file) != T_FILE)
+    (ARGF.current_file == ARGF.defin && TYPE(ARGF.current_file) != T_FILE)
 #define ARGF_FORWARD(argc, argv) do {\
     if (ARGF_GENERIC_INPUT_P())\
 	return argf_forward(argc, argv, argf);\
@@ -6728,8 +6733,8 @@ argf_next_argv(VALUE argf)
     rb_io_t *fptr;
     int stdout_binmode = 0;
 
-    if (TYPE(rb_stdout) == T_FILE) {
-        GetOpenFile(rb_stdout, fptr);
+    if (TYPE(ARGF.defout) == T_FILE) {
+        GetOpenFile(ARGF.defout, fptr);
         if (fptr->mode & FMODE_BINMODE)
             stdout_binmode = 1;
     }
@@ -6751,7 +6756,7 @@ argf_next_argv(VALUE argf)
 	    ARGF.filename = rb_ary_shift(ARGF.argv);
 	    fn = StringValueCStr(ARGF.filename);
 	    if (strlen(fn) == 1 && fn[0] == '-') {
-		ARGF.current_file = rb_stdin;
+		ARGF.current_file = ARGF.defin;
 		if (ARGF.inplace) {
 		    rb_warn("Can't do inplace edit for stdio; skipping");
 		    goto retry;
@@ -6768,8 +6773,8 @@ argf_next_argv(VALUE argf)
 		    VALUE str;
 		    int fw;
 
-		    if (TYPE(rb_stdout) == T_FILE && rb_stdout != orig_stdout) {
-			rb_io_close(rb_stdout);
+		    if (TYPE(ARGF.defout) == T_FILE && ARGF.defout != orig_stdout) {
+			rb_io_close(ARGF.defout);
 		    }
 		    fstat(fr, &st);
 		    if (*ARGF.inplace) {
@@ -6821,8 +6826,8 @@ argf_next_argv(VALUE argf)
 #endif
 		    }
 #endif
-		    rb_stdout = prep_io(fw, FMODE_WRITABLE, rb_cFile, fn);
-		    if (stdout_binmode) rb_io_binmode(rb_stdout);
+		    ARGF.defout = prep_io(fw, FMODE_WRITABLE, rb_cFile, fn);
+		    if (stdout_binmode) rb_io_binmode(ARGF.defout);
 		}
 		ARGF.current_file = prep_io(fr, FMODE_READABLE, rb_cFile, fn);
 	    }
@@ -6841,11 +6846,11 @@ argf_next_argv(VALUE argf)
 	}
     }
     else if (ARGF.next_p == -1) {
-	ARGF.current_file = rb_stdin;
+	ARGF.current_file = ARGF.defin;
 	ARGF.filename = rb_str_new2("-");
 	if (ARGF.inplace) {
 	    rb_warn("Can't do inplace edit for stdio");
-	    rb_stdout = orig_stdout;
+	    ARGF.defout = orig_stdout;
 	}
     }
     return TRUE;
@@ -7098,6 +7103,46 @@ argf_readlines(int argc, VALUE *argv, VALUE argf)
     }
 
     return ary;
+}
+
+static VALUE
+argf_loop(int argc, VALUE *argv, VALUE argf)
+{
+    VALUE line, print = Qfalse, chomp = Qfalse, split = Qfalse;
+    ID id_chomp = rb_intern("chomp!");
+    ID id_split = rb_intern("split");
+
+    rb_scan_args(argc, argv, "03", &print, &chomp, &split);
+    while (!NIL_P(line = argf_gets(0, 0, argf))) {
+	if (chomp == Qtrue) {
+	    rb_funcall2(line, id_chomp, 0, 0);
+	}
+	else if (RTEST(chomp)) {
+	    rb_funcall2(line, id_chomp, 1, &chomp);
+	}
+	if (RTEST(split)) {
+	    if (split == Qtrue) {
+		line = rb_str_split(line, " ");
+	    }
+	    else {
+		line = rb_funcall2(line, id_split, 1, &split);
+	    }
+	    rb_yield_splat(line);
+	}
+	else {
+	    rb_yield(line);
+	}
+	if (RTEST(print)) {
+	    VALUE result[2];
+	    int lines = 1;
+	    result[0] = rb_lastline_get();
+	    if (RTEST(chomp)) {
+		result[lines++] = chomp == Qtrue ? rb_rs : chomp;
+	    }
+	    rb_io_print(lines, result, ARGF.defout);
+	}
+    }
+    return argf;
 }
 
 /*
@@ -8987,6 +9032,12 @@ argf_read(int argc, VALUE *argv, VALUE argf)
     return str;
 }
 
+static VALUE
+argf_write(VALUE argf, VALUE str)
+{
+    return rb_io_write(ARGF.defout, str);
+}
+
 struct argf_call_arg {
     int argc;
     VALUE *argv;
@@ -9637,6 +9688,31 @@ rb_get_argv(void)
     return ruby_vm_get_argv(GET_VM());
 }
 
+static VALUE
+argf_stdin_get(VALUE argf)
+{
+    return ARGF.defin;
+}
+
+static VALUE
+argf_stdin_set(VALUE argf, VALUE f)
+{
+    return ARGF.defin = f;
+}
+
+static VALUE
+argf_stdout_get(VALUE argf)
+{
+    return ARGF.defout;
+}
+
+static VALUE
+argf_stdout_set(VALUE argf, VALUE f)
+{
+    must_respond_to(id_write, f, rb_intern("stdout"));
+    return ARGF.defout = f;
+}
+
 /*
  * Document-class: IOError
  *
@@ -10000,6 +10076,10 @@ Init_IO(void)
     rb_define_method(rb_cARGF, "initialize_copy", argf_initialize_copy, 1);
     rb_define_method(rb_cARGF, "to_s", argf_to_s, 0);
     rb_define_method(rb_cARGF, "argv", argf_argv, 0);
+    rb_define_method(rb_cARGF, "stdin", argf_stdin_get, 0);
+    rb_define_method(rb_cARGF, "stdin=", argf_stdin_set, 1);
+    rb_define_method(rb_cARGF, "stdout", argf_stdout_get, 0);
+    rb_define_method(rb_cARGF, "stdout=", argf_stdout_set, 1);
 
     rb_define_method(rb_cARGF, "fileno", argf_fileno, 0);
     rb_define_method(rb_cARGF, "to_i", argf_fileno, 0);
@@ -10022,6 +10102,12 @@ Init_IO(void)
     rb_define_method(rb_cARGF, "getbyte", argf_getbyte, 0);
     rb_define_method(rb_cARGF, "readchar", argf_readchar, 0);
     rb_define_method(rb_cARGF, "readbyte", argf_readbyte, 0);
+    rb_define_method(rb_cARGF, "write", argf_write, 1);
+    rb_define_method(rb_cARGF, "<<", rb_io_addstr, 1);
+    rb_define_method(rb_cARGF, "print", rb_io_print, -1);
+    rb_define_method(rb_cARGF, "putc", rb_io_putc, 1);
+    rb_define_method(rb_cARGF, "puts", rb_io_puts, -1);
+    rb_define_method(rb_cARGF, "printf", rb_io_printf, -1);
     rb_define_method(rb_cARGF, "tell", argf_tell, 0);
     rb_define_method(rb_cARGF, "seek", argf_seek_m, -1);
     rb_define_method(rb_cARGF, "rewind", argf_rewind, 0);
@@ -10048,6 +10134,8 @@ Init_IO(void)
     rb_define_method(rb_cARGF, "external_encoding", argf_external_encoding, 0);
     rb_define_method(rb_cARGF, "internal_encoding", argf_internal_encoding, 0);
     rb_define_method(rb_cARGF, "set_encoding", argf_set_encoding, -1);
+
+    rb_define_method(rb_cARGF, "loop", argf_loop, -1);
 
     *argfp = rb_class_new_instance(0, 0, rb_cARGF);
 
